[gd_scene load_steps=6 format=3 uid="uid://c0o74wxhbs6lw"]

[ext_resource type="Script" path="res://scripts/mustard_inst.gd" id="1_4us2d"]
[ext_resource type="PackedScene" uid="uid://dhen8csb05vml" path="res://assets/mustard.glb" id="1_t34h1"]
[ext_resource type="PackedScene" uid="uid://b1vmxleslgkpi" path="res://assets/mustard_ball.glb" id="2_3rqsu"]
[ext_resource type="AudioStream" uid="uid://ckdfvvwtjqunw" path="res://audio/flyswatter.wav" id="4_jd2sg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_fx2og"]
radius = 0.35417

[node name="inst" type="Node3D" groups=["projectile"]]
script = ExtResource("1_4us2d")

[node name="ref_mesh" parent="." instance=ExtResource("1_t34h1")]
transform = Transform3D(0.4, 0, 0, 0, -1.74846e-08, -0.4, 0, 0.4, -1.74846e-08, 0, 0.3, 0.491753)
visible = false

[node name="mustard_ball2" parent="." instance=ExtResource("2_3rqsu")]

[node name="mustard_ball" parent="mustard_ball2" index="0"]
transform = Transform3D(0.122687, -0.0781603, 3.41649e-09, 0, -6.35864e-09, -0.145469, 0.0781603, 0.122687, -5.36282e-09, 0, 0, 0)

[node name="hit_box" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="hit_box"]
shape = SubResource("SphereShape3D_fx2og")

[node name="timer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jd2sg")
volume_db = -18.0

[connection signal="body_entered" from="hit_box" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="hit" to="." method="_on_hit_finished"]

[editable path="mustard_ball2"]
